--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="Arup D." />
     <meta name="description" content="" />
-    <link rel="stylesheet" href="/css/main.min.4a7ec8660f9a44b08c4da97c5f2e31b1192df1d4d0322e65c0dbbc6ecb1b863f.css" />
+    <link rel="stylesheet" href="https://ad644.github.io/css/main.min.4a7ec8660f9a44b08c4da97c5f2e31b1192df1d4d0322e65c0dbbc6ecb1b863f.css" />
 
     
     <meta name="twitter:card" content="summary"/>
@@ -20,7 +20,7 @@
 <meta property="og:description" content="👋 Hi, I&rsquo;m Arup from planet Earth😎 Socialist, liberal and secular
 👀 I’m interested in writing articles, watching movies and little bit coding🌱 Currently learning Mandarin💞️ I’m looking to collaborate on opensource projects📫 You can reach me by Skype, Github and Email" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="/about/" /><meta property="article:section" content="" />
+<meta property="og:url" content="https://ad644.github.io/about/" /><meta property="article:section" content="" />
 
 
 
@@ -29,7 +29,7 @@
   </head>
   <body>
     <header class="app-header">
-      <a href="/"><img class="app-header-avatar" src="/me.png" alt="Arup D." /></a>
+      <a href="https://ad644.github.io/"><img class="app-header-avatar" src="/me.png" alt="Arup D." /></a>
       <h1>Arup&#39;s Memoirs</h1>
       <nav class="app-header-menu">
           <a class="app-header-menu-item" href="/">Home</a>
