--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="Arup D." />
     <meta name="description" content="Scribe, Learner" />
-    <link rel="stylesheet" href="/css/main.min.4a7ec8660f9a44b08c4da97c5f2e31b1192df1d4d0322e65c0dbbc6ecb1b863f.css" />
+    <link rel="stylesheet" href="https://ad644.github.io/css/main.min.4a7ec8660f9a44b08c4da97c5f2e31b1192df1d4d0322e65c0dbbc6ecb1b863f.css" />
 
     
     <meta name="twitter:card" content="summary"/>
@@ -18,14 +18,14 @@
     <meta property="og:title" content="Arup&#39;s Memoirs" />
 <meta property="og:description" content="Scribe, Learner" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="/" />
+<meta property="og:url" content="https://ad644.github.io/" />
 
 
 
   </head>
   <body>
     <header class="app-header">
-      <a href="/"><img class="app-header-avatar" src="/me.png" alt="Arup D." /></a>
+      <a href="https://ad644.github.io/"><img class="app-header-avatar" src="/me.png" alt="Arup D." /></a>
       <h1>Arup&#39;s Memoirs</h1>
       <nav class="app-header-menu">
           <a class="app-header-menu-item" href="/">Home</a>
@@ -69,7 +69,7 @@
     <ul class="posts-list">
       
         <li class="posts-list-item">
-          <a class="posts-list-item-title" href="/posts/hello-world/">Hello World</a>
+          <a class="posts-list-item-title" href="https://ad644.github.io/posts/hello-world/">Hello World</a>
           <span class="posts-list-item-description">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-calendar">
   <title>calendar</title>
