--- a/about/index.html
+++ b/about/index.html
@@ -11,17 +11,6 @@
     <link rel="stylesheet" href="https://ad644.github.io/css/main.min.4a7ec8660f9a44b08c4da97c5f2e31b1192df1d4d0322e65c0dbbc6ecb1b863f.css" />
 
     
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-25CYYWB61S"></script>
-<script>
-var doNotTrack = false;
-if (!doNotTrack) {
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
-	gtag('config', 'G-25CYYWB61S', { 'anonymize_ip': false });
-}
-</script>
-
     <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="About"/>
 <meta name="twitter:description" content="👋 Hi, I&rsquo;m Arup from planet Earth😎 Socialist, liberal and secular
@@ -106,7 +95,7 @@ if (!doNotTrack) {
             return;
         }
         var d = document, s = d.createElement('script'); s.async = true;
-        s.src = '//' + "iamarup" + '.disqus.com/embed.js';
+        s.src = '//' + "ad644" + '.disqus.com/embed.js';
         s.setAttribute('data-timestamp', +new Date());
         (d.head || d.body).appendChild(s);
     })();
